--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 <header class="container">
  <div class="text-right">
-  <span class="border border-primary"></span><h1 class="col-sm-8"><a href="file:///C:/Users/googleyuser/Documents/bootstrap/index.html"> Jerome Robotics Club </a></h1></span>
+  <span class="border border-primary"><h1 class="col-sm-8"><a href="file:///C:/Users/googleyuser/Documents/bootstrap/index.html"> Jerome Robotics Club </a></h1></span>
    <nav class="col-sm-4">
  <a class="btn btn-primary href="#>JOIN </a>
  <a class="btn btn-primary href="#> TEAMS </a>
